Continue fixing spacing issues

--- a/_lib/container.scss
+++ b/_lib/container.scss
@@ -15,3 +15,7 @@
     margin-top: $base_spacing_desktop;
   }
 }
+
+body {
+  margin: 0;
+}
