--- a/_lib/header.scss
+++ b/_lib/header.scss
@@ -2,11 +2,14 @@
   @include grid-column(12);
   border-bottom: $base-border;
   display: inline-block;
+  padding: ($base_spacing_mobile / 2) 0 $base_spacing_mobile;
 
   @include grid-media($neat-grid-tablet) {
     align-items: center;
     display: flex;
     justify-content: space-between;
+    padding-top: $base_spacing_desktop / 4;
+    padding-bottom: $base_spacing_desktop / 4;
   }
 }
 
